code/src/main/java/net/fastj/antlrgenerator/LangParser.java
// Generated from Lang.g4 by ANTLR 4.5.3
package net.fastj.antlrgenerator;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, ID=91, OP_PLUSPLUS=92, OP_MINUSMINUS=93, 
		OP_PLUS=94, OP_MINUS=95, OP_POWER=96, OP_MULTIPLY=97, OP_DIVIDE=98, OP_MODE=99, 
		OP_BIT_NOT=100, OP_BIT_AND=101, OP_BIT_OR=102, OP_BIT_XOR=103, OP_BIT_LEFT_SHIFT=104, 
		OP_BIT_RIGHT_SHIFT=105, OP_BIT_RIGHT_ROTATE=106, OP_BOOLEAN_NOT=107, OP_BOOLEAN_AND=108, 
		OP_BOOLEAN_OR=109, OP_REF_EQUALS=110, OP_REF_NOT_EQUALS=111, OP_REGEX_MATCH=112, 
		OP_EQUALS=113, OP_NOT_EQUALS=114, OP_GREATER_THAN=115, OP_GREATER_EQAULS=116, 
		OP_LESS_THAN=117, OP_LESS_EQUALS=118, OP_NULLOR=119, OP_DOT=120, OP_COMMA=121, 
		OP_QUESTION=122, OP_COLON=123, OP_PARENTHESIS_LEFT=124, OP_PARENTHESIS_RIGHT=125, 
		OP_BRACKET_LEFT=126, OP_BRACKET_RIGHT=127, OP_BRACE_LEFT=128, OP_BRACE_RIGHT=129, 
		OP_SEMICOLON=130, OP_ASSIGN=131, OP_PLUS_ASSIGN=132, OP_MINUS_ASSIGN=133, 
		OP_MULTI_ASSIGN=134, OP_DIV_ASSIGN=135, OP_MODE_ASSIGN=136, OP_POWER_ASSIGN=137, 
		OP_BIT_AND_ASSIGN=138, OP_BIT_OR_ASSIGN=139, OP_BIT_XOR_ASSIGN=140, OP_BIT_LEFT_SHIFT_ASSIGN=141, 
		OP_BIT_RIGHT_SHIFT_ASSIGN=142, OP_BIT_RIGHT_ROTATE_ASSIGN=143, DATA_NUMBER=144, 
		DATA_LONG=145, DATA_STRING=146, DATA_CHAR=147, LINE_COMMENT=148, COMMENT=149, 
		NEWLINE=150, WS=151;
	public static final int
		RULE_source = 0, RULE_sourceUnused = 1, RULE_namespace = 2, RULE_klass = 3, 
		RULE_operatorFunction = 4, RULE_function = 5, RULE_segment = 6, RULE_statement = 7, 
		RULE_term = 8, RULE_variantName = 9, RULE_atomicObject = 10, RULE_fullPath = 11, 
		RULE_klassName = 12, RULE_keyWords = 13, RULE_operators = 14;
	public static final String[] ruleNames = {
		"source", "sourceUnused", "namespace", "klass", "operatorFunction", "function", 
		"segment", "statement", "term", "variantName", "atomicObject", "fullPath", 
		"klassName", "keyWords", "operators"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "'class'", "'def'", "'()'", "'{}'", "'if'", "'else'", 
		"'do'", "'while'", "'for'", "'var'", "'switch'", "'case'", "'default'", 
		"'try'", "'catch'", "'finally'", "'synchronized'", "'return'", "'yield'", 
		"'continue'", "'break'", "'throw'", "'defined'", "'null'", "'true'", "'false'", 
		"'this'", "'super'", "'assert'", "'import'", "'include'", "'void'", "'boolean'", 
		"'byte'", "'char'", "'short'", "'int'", "'long'", "'float'", "'double'", 
		"'string'", "'object'", "'new'", "'=>'", "'[]'", "'instanceof'", "'as'", 
		"'in'", "'auto'", "'static'", "'external'", "'volatile'", "'register'", 
		"'asm'", "'transient'", "'val'", "'unsigned'", "'decimal'", "'strictfp'", 
		"'interface'", "'enum'", "'struct'", "'lambda'", "'delegate'", "'extends'", 
		"'implements'", "'override'", "'native'", "'public'", "'protected'", "'private'", 
		"'internal'", "'friend'", "'virtual'", "'abstract'", "'final'", "'const'", 
		"'ref'", "'out'", "'using'", "'namespace'", "'delete'", "'define'", "'throws'", 
		"'goto'", "'elif'", "'foreach'", "'alias'", "'global'", null, "'++'", 
		"'--'", "'+'", "'-'", "'**'", "'*'", "'/'", "'%'", "'~'", "'&'", "'|'", 
		"'^'", "'<<'", "'>>'", "'>>>'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
		"'~='", "'==='", "'!=='", "'>'", "'>='", "'<'", "'<='", "'??'", "'.'", 
		"','", "'?'", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", 
		"'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'**='", "'&='", "'|='", 
		"'^='", "'<<='", "'>>='", "'>>>='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "ID", "OP_PLUSPLUS", "OP_MINUSMINUS", 
		"OP_PLUS", "OP_MINUS", "OP_POWER", "OP_MULTIPLY", "OP_DIVIDE", "OP_MODE", 
		"OP_BIT_NOT", "OP_BIT_AND", "OP_BIT_OR", "OP_BIT_XOR", "OP_BIT_LEFT_SHIFT", 
		"OP_BIT_RIGHT_SHIFT", "OP_BIT_RIGHT_ROTATE", "OP_BOOLEAN_NOT", "OP_BOOLEAN_AND", 
		"OP_BOOLEAN_OR", "OP_REF_EQUALS", "OP_REF_NOT_EQUALS", "OP_REGEX_MATCH", 
		"OP_EQUALS", "OP_NOT_EQUALS", "OP_GREATER_THAN", "OP_GREATER_EQAULS", 
		"OP_LESS_THAN", "OP_LESS_EQUALS", "OP_NULLOR", "OP_DOT", "OP_COMMA", "OP_QUESTION", 
		"OP_COLON", "OP_PARENTHESIS_LEFT", "OP_PARENTHESIS_RIGHT", "OP_BRACKET_LEFT", 
		"OP_BRACKET_RIGHT", "OP_BRACE_LEFT", "OP_BRACE_RIGHT", "OP_SEMICOLON", 
		"OP_ASSIGN", "OP_PLUS_ASSIGN", "OP_MINUS_ASSIGN", "OP_MULTI_ASSIGN", "OP_DIV_ASSIGN", 
		"OP_MODE_ASSIGN", "OP_POWER_ASSIGN", "OP_BIT_AND_ASSIGN", "OP_BIT_OR_ASSIGN", 
		"OP_BIT_XOR_ASSIGN", "OP_BIT_LEFT_SHIFT_ASSIGN", "OP_BIT_RIGHT_SHIFT_ASSIGN", 
		"OP_BIT_RIGHT_ROTATE_ASSIGN", "DATA_NUMBER", "DATA_LONG", "DATA_STRING", 
		"DATA_CHAR", "LINE_COMMENT", "COMMENT", "NEWLINE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SourceContext extends ParserRuleContext {
		public List<SegmentContext> segment() {
			return getRuleContexts(SegmentContext.class);
		}
		public SegmentContext segment(int i) {
			return getRuleContext(SegmentContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<KlassContext> klass() {
			return getRuleContexts(KlassContext.class);
		}
		public KlassContext klass(int i) {
			return getRuleContext(KlassContext.class,i);
		}
		public List<NamespaceContext> namespace() {
			return getRuleContexts(NamespaceContext.class);
		}
		public NamespaceContext namespace(int i) {
			return getRuleContext(NamespaceContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangListener ) ((LangListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangListener ) ((LangListener)listener).exitSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(34);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(30);
					segment();
					}
					break;
				case 2:
					{
					setState(31);
					function();
					}
					break;
				case 3:
					{
					setState(32);
					klass();
					}
					break;
				case 4:
					{
					setState(33);
					namespace();
					}
					break;
				}
				}
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__45))) != 0) || ((((_la - 91)) & ~0x3f) == 0 && ((1L << (_la - 91)) & ((1L << (ID - 91)) | (1L << (OP_PLUSPLUS - 91)) | (1L << (OP_MINUSMINUS - 91)) | (1L << (OP_PLUS - 91)) | (1L << (OP_MINUS - 91)) | (1L << (OP_BIT_NOT - 91)) | (1L << (OP_BOOLEAN_NOT - 91)) | (1L << (OP_DOT - 91)) | (1L << (OP_PARENTHESIS_LEFT - 91)) | (1L << (OP_BRACKET_LEFT - 91)) | (1L << (OP_BRACE_LEFT - 91)) | (1L << (OP_SEMICOLON - 91)) | (1L << (DATA_NUMBER - 91)) | (1L << (DATA_LONG - 91)) | (1L << (DATA_STRING - 91)) | (1L << (DATA_CHAR - 91)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceUnusedContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LangParser.EOF, 0); }
		public SourceUnusedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceUnused; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangListener ) ((LangListener)listener).enterSourceUnused(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangListener ) ((LangListener)listener).exitSourceUnused(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitSourceUnused(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceUnusedContext sourceUnused() throws RecognitionException {
		SourceUnusedContext _localctx = new SourceUnusedContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceUnused);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			source();
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public KlassNameContext klassName() {
			return getRuleContext(KlassNameContext.class,0);
		}
		public List<SegmentContext> segment() {
			return getRuleContexts(SegmentContext.class);
		}
		public SegmentContext segment(int i) {
			return getRuleContext(SegmentContext.class,i);
		}
		public List<OperatorFunctionContext> operatorFunction() {
			return getRuleContexts(OperatorFunctionContext.class);
		}
		public OperatorFunctionContext operatorFunction(int i) {
			return getRuleContext(OperatorFunctionContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<KlassContext> klass() {
			return getRuleContexts(KlassContext.class);
		}
		public KlassContext klass(int i) {
			return getRuleContext(KlassContext.class,i);
		}
		public List<NamespaceContext> namespace() {
			return getRuleContexts(NamespaceContext.class);
		}
		public NamespaceContext namespace(int i) {
			return getRuleContext(NamespaceContext.class,i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangListener ) ((LangListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangListener ) ((LangListener)listener).exitNamespace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LangVisitor ) return ((LangVisitor<? extends T>)visitor).visitNamespace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namespace);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__0);
			setState(42);
			klassName();
			setState(43);
			match(OP_BRACE_LEFT);
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(49);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(44);
					segment();
					}
					break;
				case 2:
					{
					setState(45);
					operatorFunction();
					}
					break;
				case 3:
					{
					setState(46);
					function();
					}
					break;
				case 4:
					{
					setState(47);
					klass();
					}
					break;
				case 5:
					{
					setState(48);
					namespace();
					}
					break;
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__45))) != 0) || ((((_la - 91)) & ~0x3f) == 0 && ((1L << (_la - 91)) & ((1L << (ID - 91)) | (1L << (OP_PLUSPLUS - 91)) | (1L << (OP_MINUSMINUS - 91)) | (1L << (OP_PLUS - 91)) | (1L << (OP_MINUS - 91)) | (1L << (OP_BIT_NOT - 91)) | (1L << (OP_BOOLEAN_NOT - 91)) | (1L << (OP_DOT - 91)) | (1L << (OP_PARENTHESIS_LEFT - 91)) | (1L << (OP_BRACKET_LEFT - 91)) | (1L << (OP_BRACE_LEFT - 91)) | (1L << (OP_SEMICOLON - 91)) | (1L << (DATA_NUMBER - 91)) | (1L << (DATA_LONG - 91)) | (1L << (DATA_STRING - 91)) | (1L << (DATA_CHAR - 91)))) != 0) );
			setState(53);
			match(OP_BRACE_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
